// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldTextArea with default label 1`] = `
.c4 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c4 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 textarea {
  height: 6.25rem;
  width: 100%;
  resize: vertical;
  resize: vertical;
  border: solid 1px;
  width: 100%;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
}

.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 100%;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c5 {
  grid-area: messages;
}

.c0 > .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c8 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c7 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
    id="FieldTextAreaID-labeledby"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <textarea
        aria-describedby="FieldTextAreaID-describedby"
      />
    </div>
  </div>
  <div
    className="c5 "
    id="FieldTextAreaID-describedby"
  />
</div>
`;

exports[`A FieldTextArea with label inline 1`] = `
.c4 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c4 .c7 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 textarea {
  height: 6.25rem;
  width: 100%;
  resize: vertical;
  resize: vertical;
  border: solid 1px;
  width: 100%;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
}

.c6 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c5 {
  grid-area: messages;
}

.c6 > .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 100%;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: grid;
  grid-template-areas: "label input detail" ". messages messages";
  grid-template-columns: 150px 1fr;
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c5 {
  grid-area: messages;
}

.c0 > .c1 {
  grid-area: label;
  text-align: right;
  line-height: 36px;
  justify-self: end;
  height: 36px;
  padding-right: 0.75rem;
}

.c0 .c9 {
  grid-area: detail;
  justify-self: end;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-left: 0.75rem;
}

.c0 .c8 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextAreaID"
    id="FieldTextAreaID-labeledby"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <textarea
        aria-describedby="FieldTextAreaID-describedby"
      />
    </div>
  </div>
  <div
    className="c5 "
    id="FieldTextAreaID-describedby"
  />
</div>
`;
